Update Simple Outlier Detector.ipynb

--- a/Simple Outlier Detector.ipynb
+++ b/Simple Outlier Detector.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adverity - Data Scientist Assignment - Simple outlier detection"
+    "# Data Scientist Assignment - Simple outlier detection"
    ]
   },
   {
