Minor text updates

--- a/Simple Outlier Detector.ipynb
+++ b/Simple Outlier Detector.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Scientist Assignment - Simple outlier detection"
+    "# Simple outlier detection for CTR"
    ]
   },
   {
